<resources>
    <string name="app_name">Invoice Billing&amp;Inventory Management System</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="login_txt">please sign in to continue</string>
    <string name="phone">Phone No.</string>
    <string name="OTP">OTP</string>
    <string name="sentOTP">sent OTP</string>
    <string name="create_account">Create Account</string>
    <string name="signup_txt">please fill the inputs below here</string>
    <string name="name">Enter Full Name</string>
    <string name="store_name">Enter Store Name</string>
    <string name="phNo">Enter Phone Number</string>
    <string name="btn_verify">Verify &amp; Login</string>
    <string name="email">Enter Email</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price(per quantity)</string>
    <string name="open_nav_drawer">Open</string>
    <string name="close_nav_drawer">Close</string>
    <string name="Stocks">stocks</string>
    <string name="stocks_name">Stock Name</string>
    <string name="stocks_nos">Stock Nos.</string>

</resources>