<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.auth.SignUpFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/himalaya"
            android:text="@string/create_account"
            android:textColor="@color/white"
            android:textSize="45sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/himalaya"
            android:paddingStart="12dp"
            android:text="@string/signup_txt"
            android:textColor="#707070"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et_signup_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/ic_editext_border"
            android:drawableLeft="@drawable/ic_iconly_broken_profile"
            android:drawablePadding="8dp"
            android:fontFamily="@font/himalaya"
            android:hint="@string/name"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/et_signup_store_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/ic_editext_border"
            android:drawableLeft="@drawable/ic_iconly_light_buy"
            android:drawablePadding="8dp"
            android:fontFamily="@font/himalaya"
            android:hint="@string/store_name"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/et_signup_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/ic_editext_border"
            android:drawableLeft="@drawable/ic_iconly_light_outline_call"
            android:drawablePadding="8dp"
            android:fontFamily="@font/himalaya"
            android:hint="@string/phNo"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/et_signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/ic_editext_border"
            android:drawableLeft="@drawable/ic_iconly_light_work"
            android:drawablePadding="8dp"
            android:fontFamily="@font/himalaya"
            android:hint="@string/email"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="25sp" />

        <EditText
            android:id="@+id/et_signup_otp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/ic_editext_border"
            android:drawableLeft="@drawable/ic_iconly_light_outline_lock"
            android:drawablePadding="8dp"
            android:fontFamily="@font/himalaya"
            android:hint="@string/OTP"
            android:padding="8dp"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="25sp" />
        <LinearLayout
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signup_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:background="@drawable/ic_button_border"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/himalaya"
                android:textSize="25sp"
                android:text="@string/sentOTP" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:textSize="25sp"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/ic_button_border"
                android:fontFamily="@font/himalaya"
                android:text="@string/btn_verify" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Already have an account! "
                android:textColor="#707070"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_loginIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="#2BCBA6"
                android:text="@string/login"
                />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progress_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="invisible" />


    </LinearLayout>
</FrameLayout>