<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".ui.auth.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/himalaya"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/himalaya"
            android:text="@string/login_txt"
            android:textColor="#707070"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_login_phno"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="18dp"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_editext_border"
            android:drawableLeft="@drawable/ic_iconly_light_outline_call"
            android:drawablePadding="8dp"
            android:fontFamily="@font/himalaya"
            android:hint="@string/phone"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:textSize="25sp"
            tools:ignore="OnClick" />
        <EditText
            android:id="@+id/et_login_otp"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="18dp"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:background="@drawable/ic_editext_border"
            android:drawableStart="@drawable/ic_iconly_light_outline_lock"
            android:drawablePadding="8dp"
            android:fontFamily="@font/himalaya"
            android:hint="@string/OTP"
            android:textColorHint="@color/white"
            android:textSize="25sp" />
        <LinearLayout
            android:layout_marginTop="32dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:background="@drawable/ic_button_border"
                android:layout_marginHorizontal="12dp"
                android:fontFamily="@font/himalaya"
                android:textSize="25sp"
                android:text="@string/sentOTP" />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_weight="1"
                android:textSize="25sp"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/ic_button_border"
                android:fontFamily="@font/himalaya"
                android:text="@string/login" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="48dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Don't have an account? "
                android:textColor="#707070"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/tv_signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Sign up"
                android:textColor="#2BCBA6"
                android:textSize="15sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/login_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:visibility="invisible" />

    </LinearLayout>

</FrameLayout>